+3rem border to fix error clicks on mobile
docker bar produced double clicks on mobiles, if link was under the click.

3rem bottom-border in active and hover state of the docker fixes that.

--- a/LTS-flex-theme.css
+++ b/LTS-flex-theme.css
@@ -277,9 +277,9 @@ text-align: left ; vertical-align: top ; overflow: hidden ;
 }
 
 .docker:hover , .docker:active { background: var(--color-body) ; color: var(--color-text) ;
-margin: 1px ; padding: 0.4rem ;
+margin: 1px ; padding: 0.1rem 0.4rem 3rem 0.4rem ;
 position: fixed; bottom: 0px ; left: 2% ; z-index:250; width: 73% ; height: 75% ; 
-border-radius: 8px ; box-shadow: 0px 1px 33px #aaa ;
+border-radius: 8px ; box-shadow: 0px 1px 33px #aaa ; border-bottom: 3rem double rgba(150, 150, 150, 0.1) ;
 display: block ; overflow: auto ; vertical-align: top ; text-align: center ;
 }
 
